--- a/css/styles.css
+++ b/css/styles.css
@@ -247,6 +247,15 @@ ul, ol {
   letter-spacing: 0.02em;
   color: #2e2f42;
 }
+.container-icon {
+border: 1px solid #8E8F99;
+border-radius: 4px;
+width: 264px;
+height: 112px;
+  background-color: #F4F4FD;
+  text-align: center;
+  padding: 24px 100px;
+}
 
 /* THIRD SECTION */
 
