--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,9 @@ ul, ol {
 .main-section {
   padding: 188px 0;
   background-color: #2e2f42;
+  background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
+background-repeat: no-repeat;
+background-position: center;
 }
 
 .main-title {
@@ -253,8 +256,18 @@ border-radius: 4px;
 width: 264px;
 height: 112px;
   background-color: #F4F4FD;
-  text-align: center;
   padding: 24px 100px;
+}
+.icon-list {
+  fill: transparent;
+}
+
+.ul-social {
+  display: flex;
+}
+
+.li-social {
+  
 }
 
 /* THIRD SECTION */
