--- a/css/styles.css
+++ b/css/styles.css
@@ -6,6 +6,7 @@ body {
 
 .header-container {
   border-bottom: 1px solid #e7e9fc;
+  box-shadow: 0px 2px 1px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 1px 6px rgba(46, 47, 66, 0.08);
 }
 
 .header-flex {
@@ -139,6 +140,7 @@ ul, ol {
   background-image: linear-gradient(rgba(46, 47, 66, 0.7), rgba(46, 47, 66, 0.7)), url(../images/people-office\ 1.jpg);
 background-repeat: no-repeat;
 background-position: center;
+background-size: cover;
 }
 
 .main-title {
@@ -182,6 +184,7 @@ background-position: center;
 .main-button:focus {
   background-color: #404bbf;
 }
+
 
 /* SECOND SECTION */
 .section-two {
@@ -257,18 +260,15 @@ width: 264px;
 height: 112px;
   background-color: #F4F4FD;
   padding: 24px 100px;
+  display: flex; 
+  align-items: center;
+justify-content: center;
+margin-bottom: 8px;
 }
 .icon-list {
   fill: transparent;
 }
 
-.ul-social {
-  display: flex;
-}
-
-.li-social {
-  
-}
 
 /* THIRD SECTION */
 
@@ -299,6 +299,7 @@ padding: 0;
   calc((100% - 72px) / 4);
   border-radius: 0px 0px 4px 4px;
   background-color: #ffffff;
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .name-position {
@@ -325,7 +326,38 @@ padding: 0;
   text-align: center;
 }
 
+.ul-social {
+  display: flex;
+   justify-content: center;
+   gap: 24px;
+}
 
+.li-social {
+width: 40px;
+height: 40px;
+}
+
+.link-social {
+  width: 100%;
+  height: 100%;
+  background-color:#4d5ae5;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.link-social:hover {
+background-color: #404bbf; 
+}
+
+.link-social:focus {
+background-color: #404bbf; 
+}
+
+.icon-list {
+  fill: #f4f4fd;
+}
 
 /* FOURTH SECTION  */
 
