--- a/css/styles.css
+++ b/css/styles.css
@@ -416,8 +416,10 @@ font-weight: 500;
 
 .footer {
   background-color: #2e2f42;
-  padding: 100px 0
+  padding: 100px 0;
 }
+display: flex;
+  align-items: baseline;
 
 .link-footer {
   color: #f4f4fd;
@@ -439,3 +441,46 @@ font-weight: 500;
   letter-spacing: 0.02em;
   max-width: 264px
 }
+
+.social-media-container {
+  display: flex;
+  align-items: baseline;
+}
+
+.social-media {
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #FFFFFF;
+  margin-bottom: 16px; 
+}
+
+.social-list {
+  display: flex;
+  gap: 16px;
+
+}
+
+.social-item {
+  width: 40px; 
+  height: 40px; 
+
+}
+
+.link-social {
+  width: 100%;
+  height: 100%;
+  background-color: #4d5ae5;
+  border-radius: 50%;
+  display: flex; 
+  align-items: center;
+   justify-content: center;
+  
+} 
+.icon-footer {
+fill: #f4f4fd;
+}
+
+
+background-color: #31d0aa;
