--- a/css/styles.css
+++ b/css/styles.css
@@ -95,6 +95,21 @@ ul, ol {
   letter-spacing: 0.02em;
   padding: 24px 0;
   display: flex;
+  position: relative;
+  color: #404bbf;
+
+}
+
+.link-nav::after {
+  content: '';
+  width: 100%;
+  position: absolute;
+  left: 0;
+  bottom: -1px;
+  height: 4px;
+  background-color: #404bbf;
+  border-radius: 2px;
+  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-nav:hover,
@@ -117,6 +132,7 @@ ul, ol {
   color: #434455;
   display: block;
   padding: 24px 0;
+  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-tel-link:hover {
@@ -141,6 +157,7 @@ ul, ol {
 background-repeat: no-repeat;
 background-position: center;
 background-size: cover;
+max-width: 1440px;
 }
 
 .main-title {
@@ -175,6 +192,7 @@ background-size: cover;
   padding: 16px 32px;
   margin-left: auto;
   margin-right: auto;
+   background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-button:hover {
@@ -324,6 +342,7 @@ padding: 0;
   letter-spacing: 0.02em;
   color: #434455;
   text-align: center;
+  margin-bottom: 8px;
 }
 
 .ul-social {
