--- a/css/styles.css
+++ b/css/styles.css
@@ -404,6 +404,11 @@ background-color: #404bbf;
 
 .list-sec-four {
   width: calc((100% - 48px) / 3);
+  transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.list-sec-four:hover {
+   box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
 }
 
 .app-container {
@@ -430,6 +435,32 @@ font-weight: 500;
   letter-spacing: 0.02em;
   color: #434455;
 }
+
+.paragraph-sec-four:hover {
+   transform: translateY(0%);
+
+}
+
+.info-app-container {
+  position: relative;
+  overflow: hidden;
+}
+
+.p-info-hidden {
+  position: absolute; 
+  top: 0;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: #f4f4fd;
+  padding: 40px 32px; 
+  background-color: #4d5ae5;
+  height: 100%; 
+  width: 100%;
+  transform: translateY(100%);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
 
 /* FOOTER */
 
