--- a/css/styles.css
+++ b/css/styles.css
@@ -407,9 +407,11 @@ background-color: #404bbf;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+
 .list-sec-four:hover {
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-}
+  transform: translateY(0%);
+  }
 
 .app-container {
   padding: 32px 16px;
@@ -462,14 +464,22 @@ font-weight: 500;
 }
 
 
+
 /* FOOTER */
 
 .footer {
   background-color: #2e2f42;
   padding: 100px 0;
 }
-display: flex;
+
+.footer-container {
+  display: flex;
   align-items: baseline;
+}
+
+.container-logo-p {
+  margin-right: 120px;
+}
 
 .link-footer {
   color: #f4f4fd;
@@ -518,7 +528,7 @@ display: flex;
 
 }
 
-.link-social {
+.link-social-footer {
   width: 100%;
   height: 100%;
   background-color: #4d5ae5;
@@ -528,9 +538,13 @@ display: flex;
    justify-content: center;
   
 } 
+
+.link-social-footer:hover {
+  background-color: #31d0aa;
+}
+
 .icon-footer {
 fill: #f4f4fd;
 }
 
 
-background-color: #31d0aa;
