--- a/css/styles.css
+++ b/css/styles.css
@@ -460,9 +460,12 @@ font-weight: 500;
   height: 100%; 
   width: 100%;
   transform: translateY(100%);
-  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.p-info-hidden:hover {
+transform: translateY(0%);
+}
 
 
 /* FOOTER */
@@ -525,7 +528,7 @@ font-weight: 500;
 .social-item {
   width: 40px; 
   height: 40px; 
-
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-social-footer {
@@ -540,6 +543,10 @@ font-weight: 500;
 } 
 
 .link-social-footer:hover {
+  background-color: #31d0aa;
+}
+
+.link-social-footer:focus {
   background-color: #31d0aa;
 }
 
