--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,7 @@ ul, ol {
   display: flex;
   position: relative;
   color: #404bbf;
-
+  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-nav::after {
@@ -109,7 +109,6 @@ ul, ol {
   height: 4px;
   background-color: #404bbf;
   border-radius: 2px;
-  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-nav:hover,
@@ -192,7 +191,7 @@ max-width: 1440px;
   padding: 16px 32px;
   margin-left: auto;
   margin-right: auto;
-   background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-button:hover {
@@ -354,6 +353,7 @@ padding: 0;
 .li-social {
 width: 40px;
 height: 40px;
+transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-social {
@@ -438,7 +438,7 @@ font-weight: 500;
   color: #434455;
 }
 
-.paragraph-sec-four:hover {
+.list-sec-four p:hover {
    transform: translateY(0%);
 
 }
