--- a/css/styles.css
+++ b/css/styles.css
@@ -191,7 +191,7 @@ max-width: 1440px;
   padding: 16px 32px;
   margin-left: auto;
   margin-right: auto;
-   transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .main-button:hover {
@@ -353,7 +353,7 @@ padding: 0;
 .li-social {
 width: 40px;
 height: 40px;
-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-social {
@@ -408,9 +408,8 @@ background-color: #404bbf;
 }
 
 
-.list-sec-four:hover {
+.list-sec-four p:hover {
    box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08), 0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
-  transform: translateY(0%);
   }
 
 .app-container {
@@ -438,9 +437,7 @@ font-weight: 500;
   color: #434455;
 }
 
-.list-sec-four p:hover {
-   transform: translateY(0%);
-
+/.list-sec-four p:hover {
 }
 
 .info-app-container {
@@ -461,10 +458,6 @@ font-weight: 500;
   width: 100%;
   transform: translateY(100%);
   transform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-
-.p-info-hidden:hover {
-transform: translateY(0%);
 }
 
 
