--- a/css/styles.css
+++ b/css/styles.css
@@ -405,6 +405,7 @@ background-color: #404bbf;
 
 .list-sec-four {
   width: calc((100% - 48px) / 3);
+  transform: translateY(100%);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -462,6 +463,9 @@ font-weight: 500;
   transform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
+.list-sec-four:hover .p-info-hidden {
+    transform: translateY(0%);
+        }
 
 /* FOOTER */
 
