--- a/css/styles.css
+++ b/css/styles.css
@@ -405,7 +405,6 @@ background-color: #404bbf;
 
 .list-sec-four {
   width: calc((100% - 48px) / 3);
-  transform: translateY(100%);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -459,13 +458,13 @@ font-weight: 500;
   background-color: #4d5ae5;
   height: 100%; 
   width: 100%;
-  transform: translateY(100%);
-  transform: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+   transform: translateY(100%);
+  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-sec-four:hover .p-info-hidden {
-    transform: translateY(0%);
-        }
+  transform: translateY(0%);
+}
 
 /* FOOTER */
 
