--- a/css/styles.css
+++ b/css/styles.css
@@ -97,7 +97,6 @@ ul, ol {
   display: flex;
   position: relative;
   color: #404bbf;
-  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-nav::after {
@@ -109,11 +108,13 @@ ul, ol {
   height: 4px;
   background-color: #404bbf;
   border-radius: 2px;
+  
 }
 
 .link-nav:hover,
 .link-nav:focus {
   color: #404bbf;
+  transition:  color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .mail-tel {
@@ -459,7 +460,7 @@ font-weight: 500;
   height: 100%; 
   width: 100%;
    transform: translateY(100%);
-  transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .list-sec-four:hover .p-info-hidden {
@@ -506,6 +507,8 @@ font-weight: 500;
 .social-media-container {
   display: flex;
   align-items: baseline;
+  max-width: 208px;
+flex-wrap: wrap;
 }
 
 .social-media {
@@ -526,7 +529,7 @@ font-weight: 500;
 .social-item {
   width: 40px; 
   height: 40px; 
-transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .link-social-footer {
